force-app/main/default/objects/BrillioFC__User_Detail__c/BrillioFC__User_Detail__c.object-meta.xml
<CustomObject>
    <label>ForceClinic User Details</label>
    <nameField>
        <label>User Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ForceClinic Users Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>