force-app/main/default/objects/BrillioFC__User_Detail__c/fields/BrillioFC__IsActive__c.field-meta.xml
<CustomField>
    <fullName>BrillioFC__IsActive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsActive</label>
    <type>Checkbox</type>
</CustomField>