force-app/main/default/objects/BrillioFC__User_Detail__c/fields/BrillioFC__Knowledge_User__c.field-meta.xml
<CustomField>
    <fullName>BrillioFC__Knowledge_User__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Knowledge User</label>
    <type>Checkbox</type>
</CustomField>