force-app/main/default/objects/BrillioFC__User_Detail__c/fields/BrillioFC__Not_Logged_In__c.field-meta.xml
<CustomField>
    <fullName>BrillioFC__Not_Logged_In__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Not Logged In</label>
    <type>Checkbox</type>
</CustomField>