force-app/main/default/objects/BrillioFC__User_Detail__c/fields/BrillioFC__Profile_Detail__c.field-meta.xml
<CustomField>
    <fullName>BrillioFC__Profile_Detail__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Profile Detail</label>
    <referenceTo>BrillioFC__Profile_Detail__c</referenceTo>
    <relationshipName>Users</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>