force-app/main/default/objects/BrillioFC__User_Detail__c/fields/BrillioFC__User_Email__c.field-meta.xml
<CustomField>
    <fullName>BrillioFC__User_Email__c</fullName>
    <label>User Email</label>
    <type>Email</type>
</CustomField>